<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyOwl Campus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_foursquare">FoursquareActivity</string>
    <string name="title_activity_venues">VenuesActivity</string>
    <string name="clear_credentials">Clear credentials</string>
    <string name="launch_oauth_flow">Login FSQ</string>
    <string name="title_activity_oauth_access">OAuthAccessActivity</string>
    <string name="connected_to_foursquare">Connecting to Foursquare</string>
    <string name="app_not_installed_message">App not installed</string>
    <string name="title_activity_authorization_foursquare">AuthorizationFoursquareActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_map2">Map2Activity</string>
    <string name="title_activity_tab">Spotted</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="desc_profile_pic">Profile picture</string>
    <string name="desc_notification_category_pic">Notification category picture</string>
    <string name="desc_post_image">Post image picture</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="first_tab_title">Spotted</string>
    <string name="second_tab_title">Events</string>
    <string name="third_tab_title">Announcements</string>
    <string name="fourth_tab_title">Restaurants</string>
    <string name="fifth_tab_title">Notifications</string>
    <string name="title_activity_registration">Registration</string>
    <string name="foodTab_message">Fame? Ecco dove puoi mangiare qualcosa!</string>
    <string name="changeViewVenues">Go to venues list</string>
    <string name="addVenue">Nuovo locale</string>
    <string name="change_to_map">&#8592;Back to map</string>
    <string name="app_id">856286317717902</string>
    <string name="title_activity_gcm">GCMActivity</string>
    <string name="register">Register</string>
    <string name="unregister">Unregister</string>
    <string name="title_activity_show_related_comments">ShowRelatedCommentsActivity</string>
    <string name="type_comment">Type your comment&#8230;</string>
    <string name="notification_subtitle">Notifications</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="join">Join</string>
    <string name="going">going</string>
    <string name="comments">comments</string>
    <string name="likes">likes</string>
    <string name="dislikes">dislikes</string>

    <!-- Action bar actions and filter -->
    <string name="action_write_spotted_post">New post</string>
    <string name="action_show_profile">Profile</string>
    <string name="action_show_preferences">Preferences</string>
    <string name="action_logout">Logout</string>
    <string name="action_add_restaurant">Add restaurant</string>
    <string name="action_create_event">Create event</string>
    <string name="action_create_lesson">Create lesson</string>
    <string name="action_create_rental">Create rental</string>
    <string name="action_write_announcement">New announcement</string>
    <string name="menu_filter_events">Event filter</string>
    <string name="menu_filter_events_culture">Culture</string>
    <string name="menu_filter_events_fun">Fun</string>
    <string name="menu_filter_events_various">Various</string>
    <string name="menu_filter_spotted">Spotted filter</string>
    <string name="menu_filter_spotted_love">Love</string>
    <string name="menu_filter_spotted_hate">Complaint</string>
    <string name="menu_filter_spotted_advice">Advice</string>
    <string name="title_activity_show_relative_comments">ShowRelativeCommentsActivity</string>
    <string name="title_activity_new_spotted_post">Write post</string>

    <!-- New post creation -->
    <string name="location_and_title">Location / title</string>
    <string name="post_text">Text</string>
    <string name="post_post">Post</string>
    <string name="post_category">Category</string>
    <string name="take_picture">Take picture</string>
    <string name="location_and_title_example">ex. #library redhead girl</string>
    <string name="post_content_hint">Type here the content of your post</string>

    <string-array name="category_arrays">
        <item>Fun</item>
        <item>Love</item>
        <item>Complaint</item>
        <item>Advice</item>
    </string-array>

    <string name="title_activity_error_gcm">ErrorGcmActivity</string>

    <!-- Notification -->
    <string name="notification_text_introduction_part"> The post you are following "</string>
    <string name="notification_text_section_part"> " in the section </string>
    <string name="notification_text_comment_received_part"> received a comment.</string>
    <string name="notification_text_hit_received_part"> received a private message.</string>
    <string name="title_activity_new_event">Create event</string>

    <!-- New event creation -->
    <string name="event_title">Title</string>
    <string name="event_title_example">ex. Erasmus party</string>
    <string name="event_location">Location</string>
    <string name="event_location_example">ex. Hollywood</string>
    <string name="event_date">Event date</string>
    <string name="event_start_time">Start time</string>
    <string name="event_description">Description</string>
    <string name="event_description_hint">type here the description of the event</string>

    <string-array name="event_category_arrays">
        <item>Culture</item>
        <item>Fun</item>
        <item>Various</item>
    </string-array>

    <string name="title_activity_profile">Profile</string>

    <!-- profile hint -->
    <string name="general_info_hint">Tap to insert your age, sex and other basic information</string>
    <string name="self_summary_hint">Write a little about yourself. Just a paragraph.</string>
    <string name="what_im_doing_hint">Don\'t overthink this one; tell us what you are doing day-to-day.</string>
    <string name="im_really_good_at_hint">Go on, brag a little (or a lot). We won\'t judge.</string>
    <string name="favorite_hint">That\'s easy</string>
    <string name="six_things_without_hint">One last effort and then your profile will be complete</string>
    <string name="search_hint">Search users</string>
    <string name="search">Search</string>

    <!-- profile label -->
    <string name="self_summary">SELF SUMMARY</string>
    <string name="what_im_doing">WHAT I\'M DOING WITH MY LIFE</string>
    <string name="im_really_good_at">I\'M REALLY GOOD AT</string>
    <string name="favorite">FAVORITE BOOKS, MOVIES, SHOWS, MUSIC AND FOOD</string>
    <string name="six_things_without">THE SIX THINGS I COULD NEVED DO WITHOUT</string>
    <string name="search_users">Search users</string>
    <string name="title_activity_edit_profile_field">EditProfileFieldActivity</string>
    <string name="type_here">Type here &#8230;</string>
    <string name="save">SAVE</string>
    <string name="done">DONE</string>
    <string name="title_activity_full_screen_pic">MyOwlCampus gallery mode</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="new_to_myowlcampus">New to myOwlCampus?</string>
    <string name="title_activity_search">Find user</string>
    <string name="no_user_search">No users found</string>
    <string name="edit">edit</string>

    <!-- Rental fragment -->
    <string name="changeViewRental">Go to rental list</string>
    <string name="action_create_book">Create book</string>
    <string name="book_fragment_title">Books</string>
    <string name="lesson_fragment_title">Private lessons</string>
    <string name="rental_fragment_title">Rentals</string>
    <string name="book_title_hint">book title *</string>
    <string name="book_authors_hint">author1,author2,&#8230;</string>
    <string name="book_authors_hint2">book author</string>

    <!-- New book activity -->
    <string name="title_activity_new_book">Create book</string>
    <string name="book_creation_hint">Type the ISBN code of your book and we\'ll retrieve all the needed data!</string>
    <string name="book_isbn">ISBN code</string>
    <string name="book_title">Title*</string>
    <string name="book_title_example">ex. Analisi matematica 1</string>
    <string name="book_authors">Author/authors</string>
    <string name="book_location_example">ex. Bramanti, Pagani, Salsa</string>
    <string name="book_price">Price*</string>
    <string name="book_faculty">Faculty for this book</string>
    <string name="book_publication_date">Publication year</string>
    <string name="book_publicationDate_hint">ex. 2014</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_condition">Condition</string>
    <string name="book_condition_example">Underlined / never used etc&#8230;</string>

    <string-array name="book_faculty_arrays">
        <item>Ing. Industriale,Informazione</item>
        <item>Ing. Civile,Ambientale,Territoriale</item>
        <item>Ing. Edile,Architettura</item>
        <item>Design</item>
        <item>Architettura e Società</item>
        <item>Architettura Civile</item>
    </string-array>

    <string name="books_suggested">Books suggested</string>
    <string name="books_found">Books found</string>
    <string name="no_books_found">SORRY, NO BOOKS FOUND</string>
    <string name="title_activity_new_rental">NewRentalActivity</string>
    <string name="title_activity_new_private_lesson">NewPrivateLesson</string>
    <string name="contact">Contact</string>
    <string name="error_invalid_price">This is not a number. It should look like 10 or 10.50</string>
    <string name="error_invalid_year">This is not a valid year</string>
    <string name="error_invalid_isbn">This is not a valid isbn code</string>
    <string name="error_field_authors">Author names separate by comma</string>

    <!-- New rental activity -->
    <string name="error_autocomplete">You have to choose an item from the suggestions list!!</string>
    <string name="autocomplete_hint">Type the complete address name </string>
    <string name="rental_creation_hint">Insert the complete address name of the house/room, choosing it from the suggestions.</string>
    <string name="rental_address">Address*</string>
    <string name="rental_type">Rent type*</string>
    <string name="rental_type_example">ex. Shared Room/House/Apartment</string>
    <string name="rental_meter">Square meters*</string>
    <string name="rental_price">Price (Monthly)*</string>
    <string name="rental_description">Description</string>
    <string name="rental_availability">Available from:*</string>
    <string name="rental_date_hint">date</string>
    <string name="rental_contact_hint">cell number/ email</string>
    <string name="rental_contact">Contact*</string>
    <string name="error_invalid_meters">This is not a number</string>
    <string name="rental_title">Announcement title*</string>
    <string name="rental_street_number">Nr*</string>
    <string name="rental_picture_added">Pictures added:</string>

    <!-- Announcements fragment -->
    <string name="rental_homes">Rental homes</string>
    <string name="private_lessons">Private lessons</string>
    <string name="second_hand_books">2nd hand books</string>
    
    <string name="no_comment">Be the first to write a comment!</string>
    <string name="post_author">Post author</string>
    <string name="created">created</string>
    <string name="available_from">Available from:</string>
    
</resources>