<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.polimi.dima.polisocial.creationActivities.NewBookActivity" >

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/book_creation_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Object/Location -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_creation_hint"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_isbn"
                android:textColor="@color/Green"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/isbn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/isbn_button"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rect_text_edit"
                    android:textColorHint="@color/timestamp"
                    android:inputType="text"
                    android:maxLength="60"
                    android:maxLines="1"
                    android:padding="5dip"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/isbn_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="Submit" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_title"
                android:textColor="@color/Green"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rect_text_edit"
                android:hint="@string/book_title_example"
                android:inputType="text"
                android:maxLength="45"
                android:maxLines="1"
                android:padding="5dip"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/book_price"
                android:textColor="@color/Green"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rect_text_edit"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="5dip"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_faculty"
                android:textColor="@color/Green"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerFaculty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:entries="@array/book_faculty_arrays" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_publisher"
                android:textColor="@color/Green"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rect_text_edit"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="5dip"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_publication_date"
                android:textColor="@color/Green"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/publication_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@drawable/bg_text_numbofcomments_clickable_color"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_condition"
                android:textColor="@color/Green"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rect_text_edit"
                android:inputType="text"
                android:maxLength="100"
                android:maxLines="1"
                android:padding="5dip"
                android:singleLine="true" />
            
        </LinearLayout>
    </ScrollView>

</RelativeLayout>