<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@layout/header_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.polimi.dima.polisocial.NewSpottedPostActivity" >

       <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    
    <LinearLayout
          android:id="@+id/post_creation_form"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:padding="10dip"
          android:gravity="center_horizontal">
          
          <!--  Object/Location -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#45a700"
                android:textStyle="bold"
                android:text="@string/location_and_title"/>
          <EditText
                android:id="@+id/location_and_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_and_title_example"
                android:inputType="text"
                android:background="@drawable/rect_text_edit"
                android:padding="5dip"
                android:maxLines="1"
                android:maxLength="25"
                android:singleLine="true"
                android:layout_marginBottom="10dp" />

          <!--  Spinner category -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#45a700"
                android:textStyle="bold"
                android:text="@string/post_category"/>
          
           <Spinner
        		android:id="@+id/spinnerCategory"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:entries="@array/category_arrays"
        		android:layout_marginBottom="10dp" />
          
           <ImageView 
               android:id="@+id/pic"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:visibility="gone"
               />
           
           
           <TextView 
                android:id="@+id/picture_taken_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#45a700"
                android:textStyle="bold"
                android:visibility="gone"/>
           
          <!--  Text -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#45a700"
                android:textStyle="bold"
                android:text="@string/post_text"/>
          <EditText android:id="@+id/post_text" 
              	android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/rect_text_edit"
                android:hint="@string/post_content_hint"
                android:inputType="textMultiLine"
                android:maxLines="20"
                android:padding="5dip"
                android:gravity="top"/>
        </LinearLayout>
   
</RelativeLayout>
